--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
-  "name": "react-homework-template",
+  "name": "goit-react-module3-http",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://goitacademy.github.io/react-homework-template/",
+  "homepage": "https:///MariaKhmel.io/goit-react-module3-http/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "modern-normalize": "^2.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
+    "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
